# retail-price-tracker-mcp

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: adapters.md  design.md  hermes.md  security.md
skills/retail-price-tracker/: SKILL.md
src/retail_price_tracker_mcp/: __init__.py  cli.py  config.py  db.py  models.py  ocr.py  server.py  service.py
src/retail_price_tracker_mcp/adapters/: __init__.py  base.py  generic.py  uniqlo_tw.py
tests/: test_adapters.py  test_check_events.py  test_db.py  test_ocr.py  test_service.py
