[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "retail-price-tracker-mcp"
version = "0.1.0"
description = "MCP server and Hermes skill for tracking retail product prices, starting with UNIQLO Taiwan."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "PolinLai" }]
keywords = ["mcp", "hermes", "price-tracker", "uniqlo", "shopping", "sqlite"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/bolin8017/retail-price-tracker-mcp"
Repository = "https://github.com/bolin8017/retail-price-tracker-mcp"
Issues = "https://github.com/bolin8017/retail-price-tracker-mcp/issues"

[project.scripts]
retail-price-tracker-mcp = "retail_price_tracker_mcp.server:main"
retail-price-tracker = "retail_price_tracker_mcp.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/retail_price_tracker_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["retail_price_tracker_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
